--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
-spring.datasource.url=jdbc:mysql://10.0.0.6:3306/hunan_mobile?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+#spring.datasource.url=jdbc:mysql://10.0.0.6:3306/hunan_mobile?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-#spring.datasource.password=123456
-spring.datasource.password=myeeChinarenx0+/
+spring.datasource.password=123456
+#spring.datasource.password=myeeChinarenx0+/
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #logging.path=F:\\demo
