--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,29 +1,29 @@
-#config root logger
-#log4j.rootLogger = INFO,DEBUG,ERROR,system.out
+##config root logger
+##log4j.rootLogger = INFO,DEBUG,ERROR,system.out
 #log4j.appender.system.out=org.apache.log4j.ConsoleAppender
 #log4j.appender.system.out.layout=org.apache.log4j.PatternLayout
 #log4j.appender.system.out.layout.ConversionPattern=[Log] %5p[%F:%L]:%m%n
-
-#config this Project.file logger
+#
+##config this Project.file logger
 #log4j.logger.muye-cloud.file=INFO,DEBUG,ERROR,muye-cloud.file.out
 #log4j.appender.muye-cloud.file.out=dailyRollingFileAppender
-#log4j.appender.muye-cloud.file.out.File=jfg.logger.special
+#log4j.appender.muye-cloud.file.out.Resource=jfg.logger.special
 #log4j.appender.muye-cloud.file.out.layout=org.apache.log4j.PatternLayout
 #log4j.rootLogger=INFO,WARN,DEBUG,ERROR,BridgeController
 #log4j.appender.BridgeController=org.apache.log4j.RollingFileAppender
 #log4j.appender.BridgeController.Threshold=INFO
-#log4j.appender.BridgeController.file=D:/C813507/2014/logs/CftDebug.log
+#log4j.appender.BridgeController.file=D:\\devCenter\\devCenter_debug_log.log
 #log4j.appender.BridgeController.append=true
 #log4j.appender.BridgeController.maxFileSize=20MB
 #log4j.appender.BridgeController.maxBackupIndex=10
 #log4j.appender.BridgeController.layout=org.apache.log4j.PatternLayout
 #log4j.appender.BridgeController.layout.conversionPattern=[%d{yyyy-MM-dd HH:mm:ss}] log4jVinodh -  %5p  --- %c{1}: %m%n
-
-#log4j.rootLogger=INFO,DEBUG,ERROR,ServerDailyRollingFile,stdout
+#
+##log4j.rootLogger=INFO,DEBUG,ERROR,ServerDailyRollingFile,stdout
 #
 #log4j.appender.ServerDailyRollingFile=org.apache.log4j.DailyRollingFileAppender
 #log4j.appender.ServerDailyRollingFile.DatePattern='.'yyyy-MM-dd
-#log4j.appender.ServerDailyRollingFile.File=F:\\demo\\demo.log
+#log4j.appender.ServerDailyRollingFile.Resource=D:\\devCenter\\devCenter_log.log
 #log4j.appender.ServerDailyRollingFile.layout=org.apache.log4j.PatternLayout
 #log4j.appender.ServerDailyRollingFile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p [%c] - %m%n
 #log4j.appender.ServerDailyRollingFile.Append=true
@@ -31,3 +31,11 @@
 #log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 #log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=%d yyyy-MM-dd HH:mm:ss %p [%c] %m%n
+#
+#log4j.logger.com.mybatis=DEBUG
+#log4j.logger.com.mybatis.common.jdbc.SimpleDataSource=DEBUG
+#log4j.logger.com.mybatis.common.jdbc.ScriptRunner=DEBUG
+#log4j.logger.com.mybatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+#log4j.logger.java.sql.Connection=DEBUG
+#log4j.logger.java.sql.Statement=DEBUG
+#log4j.logger.java.sql.PreparedStatement=DEBUG
