静态文件删除

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,3 +27,6 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 #spring.datasource.useGlobalDataSourceStat=true
 server.port=9090
 spring.profiles.active=@activatedProperties@
+devCenter.push.dirs=E:\\\\download_home\\\\developers
+devCenter.push.http=http://172.16.0.100/devResource/
+maxUploadSize=524288000
