--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.7player.framework</groupId>
-    <artifactId>muye-cloud</artifactId>
+    <artifactId>devCenter</artifactId>
     <version>1.0</version>
 
     <parent>
@@ -20,6 +20,7 @@
         <version.jackson>2.4.4</version.jackson>
         <java.version>1.7</java.version>
     </properties>
+
 
     <dependencies>
         <dependency>
@@ -139,15 +140,31 @@
 
     </dependencies>
 
-
-
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <configuration>
+                        <encoding>utf-8</encoding>
+                        <useDefaultDelimiters>true</useDefaultDelimiters>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <repositories>
@@ -164,5 +181,30 @@
         </pluginRepository>
     </pluginRepositories>
 
-
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <runtime.env>src/main/profiles/dev</runtime.env>
+                <final.name>devCenter</final.name>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <runtime.env>src/main/profiles/test</runtime.env>
+                <final.name>devCenter</final.name>
+            </properties>
+        </profile>
+        <profile>
+            <id>prd</id>
+            <properties>
+                <runtime.env>src/main/profiles/prod</runtime.env>
+                <final.name>devCenter</final.name>
+            </properties>
+        </profile>
+    </profiles>
 </project>
