区分环境，打不同的配置

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,7 +26,7 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 #spring.datasource.useGlobalDataSourceStat=true
 server.port=9090
-spring.profiles.active=@activatedProperties@
+spring.profiles.active=dev
 devCenter.push.dirs=E:\\\\download_home\\\\developers
-devCenter.push.http=http://172.16.0.100/devResource/
+devCenter.push.http=http://172.16.0.123:18080/devResource/
 maxUploadSize=524288000
