--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center_test?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
 #spring.datasource.url=jdbc:mysql://10.0.0.6:3306/hunan_mobile?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=123456
-#spring.datasource.password=myeeChinarenx0+/
+#spring.datasource.password=123456
+spring.datasource.password=myeeChinarenx0+/
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #logging.path=F:\\demo
@@ -26,4 +26,7 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 #spring.datasource.useGlobalDataSourceStat=true
 server.port=9092
-spring.profiles.active=@activatedProperties@
+spring.profiles.active=test
+#devCenter.push.dirs=E:\\\\download_home\\\\developers
+#devCenter.push.http=http://172.16.0.100/devResource/
+#maxUploadSize=524288000
