--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,6 @@
-spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
-#spring.datasource.url=jdbc:mysql://10.0.0.6:3306/hunan_mobile?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=123456
-#spring.datasource.password=myeeChinarenx0+/
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-#logging.path=F:\\demo
-#logging.file=F:\\demo\\demo1.log
-#logging.level.root=INFO,DEBUG,ERROR
-
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.initialSize=5
-spring.datasource.minIdle=5
-spring.datasource.maxActive=20
-spring.datasource.maxWait=60000
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-#spring.datasource.filters=stat,wall,log4j
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-#spring.datasource.useGlobalDataSourceStat=true
-server.port=9090
-spring.profiles.active=@activatedProperties@
+#本地环境
+#spring.profiles.active=dev
+#测试环境
+#spring.profiles.active=test
+#生产环境
+spring.profiles.active=prod
