1.配置文件数据库的编码方式改成UTF-8 2.项目编码导致的配置文件中文乱码修复

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://139.217.4.186:63306/dev_center_prod?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://139.217.4.186:63306/dev_center_prod?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #spring.datasource.url=jdbc:mysql://10.0.0.6:3306/hunan_mobile?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 #spring.datasource.password=123456
