--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#±¾µØ»·¾³
-#spring.profiles.active=dev
-#²âÊÔ»·¾³
+#å¼€å‘ç¯å¢ƒ
+spring.profiles.active=dev
+#æµ‹è¯•ç¯å¢ƒ
 #spring.profiles.active=test
-#Éú²ú»·¾³
-spring.profiles.active=prod
+#ç”Ÿäº§ç¯å¢ƒ
+#spring.profiles.active=prod
