--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #spring.datasource.url=jdbc:mysql://10.0.0.6:3306/hunan_mobile?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -25,7 +25,7 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 #spring.datasource.filters=stat,wall,log4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 #spring.datasource.useGlobalDataSourceStat=true
-server.port=9090
+server.port=8080
 spring.profiles.active=dev
 devCenter.push.dirs=E:\\\\download_home\\\\developers
 devCenter.push.http=http://172.16.0.123:18080/devResource/
