--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center_test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#spring.datasource.url=jdbc:mysql://10.0.0.6:3306/hunan_mobile?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center_test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://139.217.4.186:63306/dev_center_test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 #spring.datasource.password=123456
 spring.datasource.password=myeeChinarenx0+/
