--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,6 +27,16 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 #spring.datasource.useGlobalDataSourceStat=true
 server.port=8080
 spring.profiles.active=dev
-devCenter.push.dirs=E:\\\\download_home\\\\developers
-devCenter.push.http=http://172.16.0.123:18080/devResource/
+
+devCenter.pushDirs=E:\\\\download_home\\\\developers
+devCenter.pushHttp=http://172.16.0.123:18080/devResource/
 maxUploadSize=524288000
+
+
+
+devCenter.tokenExpireTime = 3600000
+
+#redis
+devCenter.redisMasterAddress=172.16.0.15
+devCenter.redisMasterPort = 6479
+devCenter.redisRedissonCache = REDISSON_CACHE
