--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -27,6 +27,14 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 #spring.datasource.useGlobalDataSourceStat=true
 server.port=9092
 spring.profiles.active=test
-#devCenter.push.dirs=E:\\\\download_home\\\\developers
-#devCenter.push.http=http://172.16.0.100/devResource/
+#devCenter.pushDirs=E:\\\\download_home\\\\developers
+#devCenter.pushHttp=http://172.16.0.100/devResource/
 #maxUploadSize=524288000
+
+
+devCenter.token.expire.time = 3600000
+
+#redis
+devCenter.redis.masterAddress=172.16.0.15
+devCenter.redis.masterPort = 6479
+devCenter.redis.redissonCache = REDISSON_CACHE
