--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -37,6 +37,5 @@ maxUploadSize=524288000
 devCenter.tokenExpireTime = 3600000
 
 #redis
-devCenter.redisMasterAddress=172.16.0.15
-devCenter.redisMasterPort = 6479
+devCenter.redisMasterAddressPort=172.16.0.15:6479
 devCenter.redisRedissonCache = REDISSON_CACHE
