--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -35,6 +35,5 @@ spring.profiles.active=test
 devCenter.token.expire.time = 3600000
 
 #redis
-devCenter.redis.masterAddress=172.16.0.15
-devCenter.redis.masterPort = 6479
-devCenter.redis.redissonCache = REDISSON_CACHE
+devCenter.redisMasterAddressPort=172.16.0.15:6479
+devCenter.redisRedissonCache = REDISSON_CACHE
