--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,5 @@
-#开发环境
-#spring.profiles.active=dev
-#测试环境
-#spring.profiles.active=test
-#生产环境
-#spring.profiles.active=prod
-
 spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#spring.datasource.url=jdbc:mysql://10.0.0.6:3306/hunan_mobile?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123456
 #spring.datasource.password=myeeChinarenx0+/
@@ -32,23 +25,17 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 #spring.datasource.filters=stat,wall,log4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 #spring.datasource.useGlobalDataSourceStat=true
-server.port=7070
-spring.aop.auto=true
+server.port=8080
 
 devCenter.excludeFileTypes=sh,exe,out
 spring.http.multipart.maxFileSize=100Mb
 spring.http.multipart.maxRequestSize=1000Mb
 
 devCenter.pushDirs=E:\\\\download_home\\\\developers
-devCenter.pushHttp=http://172.16.0.170:18080/devResource/
-maxUploadSize=524288000
-
-
-
+#devCenter.pushDirs=classpath*:/all_resource/
+#devCenter.pushDirs=/mnt/pluginportal/resource/push_test/dev_center
+devCenter.pushHttp=http://172.16.0.103:18080/devResource/
+#devCenter.pushHttp=http://10.0.0.6/devResource/
 devCenter.tokenExpireTime = 3600000
-
-#redis
-devCenter.redisMasterAddressPort=172.16.0.15:6479
-devCenter.redisRedissonCache = REDISSON_CACHE
 
 
