分离了上传文件接口，增加了前台上传文件接口，只能上传excel文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.datasource.url=jdbc:mysql://localhost:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
@@ -28,13 +29,16 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 server.port=7070
 
 devCenter.excludeFileTypes=sh,exe,out
+devCenter.supportFileTypes=xlsm,xlsx,xls
 spring.http.multipart.maxFileSize=100Mb
 spring.http.multipart.maxRequestSize=1000Mb
 
 devCenter.pushDirs=E:\\\\download_home\\\\developers
+#devCenter.pushDirs=/opt/push_test
 #devCenter.pushDirs=classpath*:/all_resource/
 #devCenter.pushDirs=/mnt/pluginportal/resource/push_test/dev_center
-devCenter.pushHttp=http://172.16.0.103:18080/devResource/
+devCenter.pushHttp=http://127.0.0.1:18080/devResource/
+#devCenter.pushHttp=http://172.16.0.100/devResource/
 #devCenter.pushHttp=http://10.0.0.6/devResource/
 devCenter.tokenExpireTime = 3600000
 
