1、修复session时长问题后台一登录就有账户。 2.  修复后台新建用户就有审核条目BUG 3.  修复版本新增和修改没有校验用户名重复 4.  增加了分页插件中通过传pageSize为0则查全部的功能 5.  项目结构分了后台和前台，分包放

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -28,34 +28,10 @@ devCenter.tokenExpireTime = 3600000
 spring.http.multipart.maxFileSize=200Mb
 spring.http.multipart.maxRequestSize=1000Mb
 
-#本地环境
-#devCenter.pushDirs=E:\\\\download_home\\\\developers
-#devCenter.pushHttp=http://172.16.0.153:18080/devResource/
-##spring.datasource.url=jdbc:mysql://localhost:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#server.context-path=/sdk
-
-#测试环境
-#devCenter.pushDirs=/opt/push_test
-#devCenter.pushHttp=http://172.16.1.151/devResource/
-#spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#spring.datasource.username=root
-#spring.datasource.password=123456
-#server.context-path=/sdk
-
-#生产环境（163）
-#devCenter.pushDirs=/opt/push_sdk
-#devCenter.pushHttp=http://sdk.myee7.com/devResource/
-#spring.datasource.url=jdbc:mysql://10.116.154.240:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-#spring.datasource.username=root
-#spring.datasource.password=root
-#server.context-path=/sdk
-
 #生产环境（10.0.0.6）
 devCenter.pushDirs=/opt/push_sdk
 devCenter.pushHttp=http://sdk.myee7.com/devResource/
+devCenter.rootAddress=http://sdk.myee7.com/sdk/
 spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=myeeChinarenx0+/
