--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -31,6 +31,7 @@ spring.http.multipart.maxRequestSize=1000Mb
 #测试环境
 devCenter.pushDirs=/opt/push_test
 devCenter.pushHttp=http://172.16.1.151/devResource/
+devCenter.rootAddress=http://172.16.1.151/sdk/
 spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123456
