1. 返回错误代码，CODE做了区别 2. 前台用户注册密码加md5

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -28,13 +28,22 @@ devCenter.tokenExpireTime = 3600000
 spring.http.multipart.maxFileSize=200Mb
 spring.http.multipart.maxRequestSize=1000Mb
 
-#生产环境（10.0.0.6）
-devCenter.pushDirs=/opt/push_sdk
+
+#生产环境（163）
+devCenter.pushDirs=/opt/devResource
 devCenter.pushHttp=http://sdk.myee7.com/devResource/
-devCenter.rootAddress=http://sdk.myee7.com/sdk/
-spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+devCenter.rootAddress=http://sdk.myee7.com/
+spring.datasource.url=jdbc:mysql://10.116.154.240:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=myeeChinarenx0+/
+spring.datasource.password=root
 server.context-path=/sdk
+#生产环境（10.0.0.6）
+#devCenter.pushDirs=/opt/devResource
+#devCenter.pushHttp=http://sdk.myee7.com/devResource/
+#devCenter.rootAddress=http://sdk.myee7.com/sdk/
+#spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.username=root
+#spring.datasource.password=myeeChinarenx0+/
+#server.context-path=/sdk
 
 
