--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #开发环境
 #spring.profiles.active=dev
 #测试环境
-spring.profiles.active=test
+#spring.profiles.active=test
 #生产环境
-#spring.profiles.active=prod
+spring.profiles.active=prod
 
