--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -30,20 +30,21 @@ spring.http.multipart.maxRequestSize=1000Mb
 
 
 #生产环境（163）
-devCenter.pushDirs=/opt/devResource
-devCenter.pushHttp=http://sdk.myee7.com/devResource/
-devCenter.rootAddress=http://sdk.myee7.com/
-spring.datasource.url=jdbc:mysql://10.116.154.240:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=root
-server.context-path=/sdk
-#生产环境（10.0.0.6）
 #devCenter.pushDirs=/opt/devResource
 #devCenter.pushHttp=http://sdk.myee7.com/devResource/
-#devCenter.rootAddress=http://sdk.myee7.com/sdk/
-#spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+#devCenter.rootAddress=http://sdk.myee7.com/
+#spring.datasource.url=jdbc:mysql://10.116.154.240:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 #spring.datasource.username=root
-#spring.datasource.password=myeeChinarenx0+/
+#spring.datasource.password=root
 #server.context-path=/sdk
+
+#生产环境（10.0.0.6）
+devCenter.pushDirs=/opt/devResource
+devCenter.pushHttp=http://push.mye7.com/devResource/
+devCenter.rootAddress=http://push.mye7.com/sdk/
+spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=myeeChinarenx0+/
+server.context-path=/sdk
 
 
