--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -40,8 +40,8 @@ spring.http.multipart.maxRequestSize=1000Mb
 
 #生产环境（10.0.0.6）
 devCenter.pushDirs=/opt/devResource
-devCenter.pushHttp=http://push.mye7.com/devResource/
-devCenter.rootAddress=http://push.mye7.com/sdk/
+devCenter.pushHttp=http://sdk.myee7.com/devResource/
+devCenter.rootAddress=http://sdk.mye7.com/sdk/
 spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=myeeChinarenx0+/
