--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -22,7 +22,7 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 #spring.datasource.useGlobalDataSourceStat=true
 server.port=9090
 
-devCenter.excludeFileTypes=sh,exe,out
+devCenter.sdkSupportedTypes=rar,zip,7z,gz,ace,uha,uda,zpaq
 devCenter.supportFileTypes=xlsm,xlsx,xls
 devCenter.tokenExpireTime = 3600000
 spring.http.multipart.maxFileSize=200Mb
