增加三种api平台文件下载

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -31,7 +31,10 @@ spring.http.multipart.maxRequestSize=1000Mb
 #测试环境
 devCenter.pushDirs=/opt/devResource
 devCenter.pushHttp=http://172.16.1.151/devResource/
+#devCenter.zipFileUrl=http://172.16.1.151/
 devCenter.rootAddress=http://172.16.1.151/sdk/
+#devCenter.sourceFilePath=/opt/devResource/partner_upload_files/source_files
+#devCenter.zipFilePath=/opt/devResource/partner_upload_files/zip_files
 spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=123456
