--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -29,10 +29,13 @@ spring.http.multipart.maxFileSize=200Mb
 spring.http.multipart.maxRequestSize=1000Mb
 
 #本地环境
-#devCenter.pushDirs=E:\\\\download_home\\\\developers
-devCenter.pushHttp=http://172.16.0.153:18080/devResource/
+devCenter.pushDirs=E:\\\\download_home\\\\developers
+devCenter.pushHttp=http://localhost/devResource/
+#devCenter.zipFileUrl=http://localhost/
 #devCenter.pushHttp=http://172.16.0.180:9090/sdk/all_resource/
 devCenter.rootAddress=http://172.16.0.180:18080/sdk/
+#devCenter.sourceFilePath=E://partner_upload_files//source_files
+#devCenter.zipFilePath=E://partner_upload_files//zip_files
 #spring.datasource.url=jdbc:mysql://localhost:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
