--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -28,6 +28,8 @@ devCenter.tokenExpireTime = 3600000
 spring.http.multipart.maxFileSize=200Mb
 spring.http.multipart.maxRequestSize=1000Mb
 
+server.session.timeout=1800
+
 
 #生产环境（163）
 #devCenter.pushDirs=/opt/devResource
@@ -40,8 +42,11 @@ spring.http.multipart.maxRequestSize=1000Mb
 
 #生产环境（10.0.0.6）
 devCenter.pushDirs=/opt/devResource
-devCenter.pushHttp=http://sdk.myee7.com/devResource/
-devCenter.rootAddress=http://sdk.mye7.com/
+devCenter.pushHttp=http://partner.mrobot.cn/devResource/
+#devCenter.zipFileUrl=http://partner.mrobot.cn/
+devCenter.rootAddress=http://partner.mrobot.cn/
+#devCenter.sourceFilePath=/opt/devResource/partner_upload_files/source_files
+#devCenter.zipFilePath=/opt/devResource/partner_upload_files/zip_files
 spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=myeeChinarenx0+/
