文件上传的固定路径

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -41,3 +41,5 @@ spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&c
 spring.datasource.username=root
 spring.datasource.password=123456
 server.context-path=/sdk
+#文件上传路径
+file.upload.path=E:\\\\download_home\\\\file_upload
