--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -43,13 +43,12 @@ server.session.timeout=1800
 #生产环境（10.0.0.6）
 devCenter.pushDirs=/opt/devResource
 devCenter.pushHttp=http://partner.mrobot.cn/devResource/
-#devCenter.zipFileUrl=http://partner.mrobot.cn/
 devCenter.rootAddress=http://partner.mrobot.cn/
-#devCenter.sourceFilePath=/opt/devResource/partner_upload_files/source_files
-#devCenter.zipFilePath=/opt/devResource/partner_upload_files/zip_files
 spring.datasource.url=jdbc:mysql://10.0.0.6:3306/dev_center?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=myeeChinarenx0+/
 server.context-path=/sdk
+#文件上传路径
+file.upload.path=/opt/program/file_upload
 
 
