--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -39,5 +39,7 @@ spring.datasource.url=jdbc:mysql://172.16.0.15:3306/dev_center?useUnicode=true&c
 spring.datasource.username=root
 spring.datasource.password=123456
 server.context-path=/sdk
+#文件上传路径
+file.upload.path=/opt/file_upload
 
 
